--- a/docs/article/main.tex
+++ b/docs/article/main.tex
@@ -9,11 +9,11 @@
 
 \sloppy
 
-\title{Instructions for Authors of SBC Conferences\\ Papers and Abstracts}
+\title{Vision-aided implementation of an Alexa List}
 
 \author{
   Joseph A. P. Quino\inst{1},
-  Fabio\inst{1},
+  Fabio A. T. Madueno\inst{1},
   Jonathan\inst{1},
 }
 
@@ -36,5 +36,27 @@
 \section{References}
 \bibliographystyle{sbc}
 % \bibliography{references/refs}
+
+\begin{thebibliography}{}
+
+\bibitem{smith2020} 
+Smith, J. (2020). Proximity Retailing and Consumer Convenience: The Rise of Localized Markets. \textit{Journal of Retail Management}, 34(2), 123-145.
+
+\bibitem{jones2019}
+Jones, A., Brown, K., \& Taylor, L. (2019). Voice Assistants in Smart Homes: A Study of User Interactions with Alexa. \textit{International Journal of Human-Computer Interaction}, 45(4), 567-580.
+
+\bibitem{doe2021}
+Doe, R., et al. (2021). The Role of Virtual Assistants in Smart Homes: An Overview of Current Applications. \textit{Journal of Smart Technology}, 7(3), 45-67.
+
+\bibitem{lee2020}
+Lee, S., \& Brown, M. (2020). Integrating Computer Vision with Voice Assistants: Opportunities in Retail. \textit{Proceedings of the IEEE International Conference on Smart Systems}, 233-240.
+
+\bibitem{wang2022}
+Wang, X., et al. (2022). AI-Powered Vision Systems for Retail: A Review of Image Recognition Technologies. \textit{ACM Transactions on Intelligent Systems}, 12(1), 89-102.
+
+\bibitem{chen2023}
+Chen, Y., \& Patel, R. (2023). Cloud Computing and Visual Recognition in Retail Environments. \textit{Journal of Cloud Technologies}, 10(5), 78-92.
+
+\end{thebibliography}
 
 \end{document}
